--- a/pages/discos.html
+++ b/pages/discos.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disgrafica.TaylorSwift</title>
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+
     <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
-     <!-- bootstrap -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+
 </head>
+
 <body>
     <!-- parte superior -->
-    <header> 
-        <h1> ¡Las eras de Taylor Swift! </h1>
-
-        <!-- nav bar  -->
+    <header>
 
         <!-- navegador  -->
         <nav class="navbar navbar-expand-lg mi-navbar  ">
             <div class="container-fluid">
+
+                <!-- logo de la pagina  -->
                 <div class="logo">
-                    <!-- logo de la pagina  -->
-                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg"
-                            alt="logo Taylor Swift">
+                    <a class="navbar-brand " href="#"><img src="../img/descarga (3).jpeg" alt="logo Taylor Swift">
                     </a>
                 </div>
 
                 <!-- opciones de menu -->
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,68 +46,103 @@
                     <ul class="navbar-nav">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html"> inicio </a>
+                            <a class="nav-link" href="../index.html"> Inicio </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/shop.html"> Tienda </a>
+                            <a class="nav-link" href="./shop.html"> Tienda </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/testimonios.html"> Testimonios</a>
+                            <a class="nav-link " href="./testimonios.html"> Testimonios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/signup.html"> Suscribete </a>
+                            <a class="nav-link " href="./signup.html"> Suscribete </a>
                         </li>
                     </ul>
                 </div>
 
             </div>
         </nav>
-    
-        
-    </body>
-     </header>
-     <!-- contenido principal -->
-     <main>  
-          <p> Descubre toda la discografía de Taylor Swift </p>
-           <h2 id="spotify">
-                  <img src="../IMG/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
-             Sumérgete en sus álbumes a través de Spotify: 
-            </h2>
+        <!-- Titulo -->
+        <h1> ¡Las eras de Taylor Swift! </h1>
+
+    </header>
+
+    <!-- contenido principal -->
+    <main>
+        <p> Descubre toda la discografía de Taylor Swift </p>
+        <h2 id="spotify">
+            <img src="../IMG/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
+            Sumérgete en sus álbumes a través de Spotify:
+        </h2>
     </main>
-    <div >
+
+    <div>
         <!-- seccion de albumes -->
-     <section class="izquierda">
-         <ol> 
-              <li> <a href="https://open.spotify.com/album/5eyZZoQEFQWRHkV2xgAeBw?si=_RWFvNVbQi2awlhKX2e-BA"> <p class="eras"> Taylor Swift </p> ( 2006 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/08CWGiv27MVQhYpuTtvx83?si=E6tYthJHSra2eYcz2PTiAA"> <p class="eras"> Fearless </p> ( 2008 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/6Ar2o9KCqcyYF9J0aQP3au?si=sQhenvuwQsC0FfFlT22r-A"> <p class="eras"> Speak Now </p> ( 2010 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/1EoDsNmgTLtmwe1BDAVxV5?si=2Csiht0DRmCU3RO337qyKA"> <p class="eras"> Red </p> ( 2012 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/5fy0X0JmZRZnVa2UEicIOl?si=690LjckdSauJejlSnOz-9Q"> <p class="eras"> 1989 </p> ( 2014 ) </a> </li>    
-              <li> <a href="https://open.spotify.com/album/6DEjYFkNZh67HP7R9PSZvv?si=neRYxAd-SuOSLkdKcG2Q-w"> <p class="eras"> Reputation </p> ( 2017 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/1NAmidJlEaVgA3MpcPFYGq?si=ZcuWqLgcTq2CHFPY3R9uVg"> <p class="eras"> Lover </p> ( 2019 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=Qa55VbwGSs-UJxg8RLn1sw"> <p class="eras"> Folklore </p> ( 2020 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/2Xoteh7uEpea4TohMxjtaq?si=4Ry4SRwuR3OaL05O2omaQQ"> <p class="eras"> Evermore </p> ( 2020 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/151w1FgRZfnKZA9FEcg9Z3?si=jNWVf1VMRreSh_8ZkV9afQ"> <p class="eras"> Midnights </p> ( 2022 ) </a> </li>
-              <li> <a href="https://open.spotify.com/album/1Mo4aZ8pdj6L1jx8zSwJnt?si=-XChVMS4R0af41-8iSvOcw"> <p class="eras"> The Tortured Poets Department </p> ( 2024 ) </a> </li>
-         </ol> 
-     </section>
+        <div class="izquierda">
+            <ol>
+                <li> <a href="https://open.spotify.com/album/5eyZZoQEFQWRHkV2xgAeBw?si=_RWFvNVbQi2awlhKX2e-BA">
+                        <p class="eras"> Taylor Swift </p> ( 2006 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/08CWGiv27MVQhYpuTtvx83?si=E6tYthJHSra2eYcz2PTiAA">
+                        <p class="eras"> Fearless </p> ( 2008 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/6Ar2o9KCqcyYF9J0aQP3au?si=sQhenvuwQsC0FfFlT22r-A">
+                        <p class="eras"> Speak Now </p> ( 2010 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/1EoDsNmgTLtmwe1BDAVxV5?si=2Csiht0DRmCU3RO337qyKA">
+                        <p class="eras"> Red </p> ( 2012 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/5fy0X0JmZRZnVa2UEicIOl?si=690LjckdSauJejlSnOz-9Q">
+                        <p class="eras"> 1989 </p> ( 2014 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/6DEjYFkNZh67HP7R9PSZvv?si=neRYxAd-SuOSLkdKcG2Q-w">
+                        <p class="eras"> Reputation </p> ( 2017 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/1NAmidJlEaVgA3MpcPFYGq?si=ZcuWqLgcTq2CHFPY3R9uVg">
+                        <p class="eras"> Lover </p> ( 2019 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=Qa55VbwGSs-UJxg8RLn1sw">
+                        <p class="eras"> Folklore </p> ( 2020 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/2Xoteh7uEpea4TohMxjtaq?si=4Ry4SRwuR3OaL05O2omaQQ">
+                        <p class="eras"> Evermore </p> ( 2020 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/151w1FgRZfnKZA9FEcg9Z3?si=jNWVf1VMRreSh_8ZkV9afQ">
+                        <p class="eras"> Midnights </p> ( 2022 )
+                    </a> </li>
+                <li> <a href="https://open.spotify.com/album/1Mo4aZ8pdj6L1jx8zSwJnt?si=-XChVMS4R0af41-8iSvOcw">
+                        <p class="eras"> The Tortured Poets Department </p> ( 2024 )
+                    </a> </li>
+            </ol>
+        </div>
 
-     <!-- seccion de imagen y audio -->
-     <section class="img-discos">
-         <h3>No te pierdas de la introduccion de las eras en "The Eras Tour !"</h3>
-          <p>
-             <a href="#audio"> - Escuchar</a>
-          </p>
-         <img src="../IMG/portada-taylor.jpeg" alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
-          <audio src="../AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
-      </section>
-   </div>
+        <!-- seccion de imagen y audio -->
+        <div class="img-discos">
+            <h3>No te pierdas de la introduccion de las eras en "The Eras Tour !"</h3>
+            <p>
+                <a href="#audio"> - Escuchar</a>
+            </p>
+            <img src="../IMG/portada-taylor.jpeg"
+                alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
+            <audio src="../AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
+        </div>
+    </div>
 
- <!-- footer  -->
- <footer>
-     <p> <img src="../IMG/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-     <p> <img src="../IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
-     <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413 para obtener ayuda. </p>
- </footer>
+    <!-- footer  -->
+    <footer>
+        <p> <img src="../IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+                href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
+        <p> <img src="../IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+                target="_blank">Taylornation@gmail.com</a></p>
+        <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
+            866-682-4413 para obtener ayuda. </p>
+    </footer>
+
+    <!-- link de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
