--- a/pages/shop.html
+++ b/pages/shop.html
@@ -5,6 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda.TaylorSwift</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+        <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -12,11 +23,11 @@
     <!-- parte superior  -->
     <header>
          <!-- navegador  -->
-         <nav class="navbar navbar-expand-lg mi-navbar  ">
+         <nav class="navbar navbar-expand-lg mi-navbar">
             <div class="container-fluid">
                 <div class="logo">
                     <!-- logo de la pagina  -->
-                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg"
+                    <a class="navbar-brand " href="#"><img src="../img/descarga (3).jpeg"
                             alt="logo Taylor Swift">
                     </a>
                 </div>
@@ -32,18 +43,18 @@
                     <ul class="navbar-nav">
 
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html"> index </a>
+                            <a class="nav-link" href="../index.html"> Inicio </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/discos.html"> Discos </a>
+                            <a class="nav-link" href="./discos.html"> Discos </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/testimonios.html"> Testimonios</a>
+                            <a class="nav-link " href="./testimonios.html"> Testimonios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/signup.html"> Suscribete </a>
+                            <a class="nav-link " href="./signup.html"> Suscribete </a>
                         </li>
-                        
+
                     </ul>
                 </div>
 
@@ -101,6 +112,11 @@
         <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
             866-682-4413 para obtener ayuda. </p>
     </footer>
+    <!-- link de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
