--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -5,18 +5,35 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title> Testimonios.TaylorSwift</title>
-   <link rel="stylesheet" href="../ccs/style.css">
+
+   <!-- bootstrap -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+
+   <!-- font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet">
+
+   <!-- css -->
+   <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
    <!-- parte superior  -->
+
    <header>
+
       <!-- navegador  -->
-      <nav class="navbar navbar-expand-lg mi-navbar  ">
+      <nav class="navbar navbar-expand-lg mi-navbar ">
          <div class="container-fluid">
+
+            <!-- logo de la pagina  -->
             <div class="logo">
-               <!-- logo de la pagina  -->
-               <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg" alt="logo Taylor Swift">
+               <a class="navbar-brand " href="#"><img src="../img/descarga (3).jpeg" alt="logo Taylor Swift">
                </a>
             </div>
 
@@ -30,16 +47,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <a class="nav-link " href="../index.html"> inicio </a>
+                     <a class="nav-link " href="../index.html"> Inicio </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="pages/shop.html"> Tienda </a>
+                     <a class="nav-link" href="./shop.html"> Tienda </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="pages/discos.html"> Discos </a>
+                     <a class="nav-link" href="./discos.html"> Discos </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link " href="pages/signup.html"> Suscribete </a>
+                     <a class="nav-link " href="./signup.html"> Suscribete </a>
                   </li>
                </ul>
             </div>
@@ -93,7 +110,7 @@
    </section>
 
    <!-- espacio para que el usuario pueda dejar uno -->
-   <section>
+   <div>
       <h4 id="mensajes"> ¡ Deja tu testimonio !</h4>
       <form action="mailenms0512@gmail.com" method="post">
          <label for="nombre"> Nombre: </label>
@@ -101,7 +118,9 @@
          <label for="mensaje"> Mensaje: </label>
          <textarea name="mensaje" id="mensaje" required></textarea>
          <input type="submit" value="Enviar">
-   </section>
+         </form>
+      </div>
+
    <!-- footer  -->
    <footer>
       <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
@@ -111,6 +130,13 @@
       <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413
          para obtener ayuda. </p>
    </footer>
+
+   <!-- link de bootstrap -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+   crossorigin="anonymous"></script>
+   
+
 </body>
 
 </html>
